Fix arrow java compat, add scala code lint step